updates tmux keybinding for new-window to use the current path

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -92,10 +92,9 @@ bind-key -T root WheelDownPane \
 
 set -sg escape-time 0
 
-bind-key c new-window -c ~
-
-bind-key \" split-window -h -c "#{pane_current_path}"
-bind-key % split-window -v -c "#{pane_current_path}"
+bind-key c new-window -c '#{pane_current_path}'
+bind-key '"' split-window -h -c '#{pane_current_path}'
+bind-key % split-window -v -c '#{pane_current_path}'
 
 bind-key r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf" \; display-message "tmux config reloaded"
 
