--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,8 +59,8 @@ set -g status-style "${BLUE__BLUE__STYLE}"
 
 set -g window-status-separator ""
 set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
-set -g window-status-format " ${HALF_CIRCLE_SMALL_LEFT}${WINDOW_NUMBER}${HALF_CIRCLE_SMALL_RIGHT} ${WINDOW_NAME} ${BLUE__BLUE}${ARROW_LARGE_RIGHT}"
-set -g window-status-current-format "${WHITE__BLUE}${HALF_CIRCLE_LEFT}${BLUE__WHITE__BOLD}${HALF_CIRCLE_SMALL_LEFT}${WINDOW_NUMBER}${HALF_CIRCLE_SMALL_RIGHT} ${WINDOW_NAME} ${WINDOW_FLAGS} ${WHITE__BLUE}${HALF_CIRCLE_RIGHT}"
+set -g window-status-format " ${WINDOW_NUMBER} ${WINDOW_NAME}"
+set -g window-status-current-format " ${WHITE__BLUE}${WINDOW_NUMBER} ${WINDOW_NAME}${WINDOW_FLAGS} "
 
 set -g window-status-current-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
