replaces space between window number and name w/ colon in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,8 +59,8 @@ set -g status-style "${BLUE__BLUE__STYLE}"
 
 set -g window-status-separator ""
 set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
-set -g window-status-format " ${WINDOW_NUMBER} ${WINDOW_NAME}"
-set -g window-status-current-format " ${WHITE__BLUE}${WINDOW_NUMBER} ${WINDOW_NAME}${WINDOW_FLAGS} "
+set -g window-status-format " ${WINDOW_NUMBER}:${WINDOW_NAME}"
+set -g window-status-current-format " ${WHITE__BLUE}${WINDOW_NUMBER}:${WINDOW_NAME}${WINDOW_FLAGS} "
 
 set -g window-status-current-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
