updates cursor color to nightfox green and updates TERM to xterm-kitty allowing the cursor to work in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -144,8 +144,7 @@ set -w -g wrap-search off
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'off'
 
-set -g default-terminal 'screen-256color'
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q:Tc'
+set -g default-terminal "${TERM}"
 
 set -g focus-events on
 set -g display-time 2000
