changes from diffr to delta as git pager

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -12,6 +12,7 @@ tap "samuelmeuli/tap"
 tap "xcodesorg/made"
 brew "libpng"
 brew "webp"
+brew "jpeg-xl"
 brew "aom"
 brew "libssh2"
 brew "aria2"
@@ -22,26 +23,29 @@ brew "awscli"
 brew "bat"
 brew "berkeley-db", link: true
 brew "btop"
+brew "python@3.12"
 brew "pycparser"
 brew "cffi"
 brew "cmatrix"
-brew "diffr"
 brew "dnsmasq", restart_service: true
 brew "docker"
 brew "docker-compose"
 brew "docutils"
 brew "folly"
-brew "edencommon"
-brew "eza"
 brew "fizz"
 brew "wangle"
 brew "fb303"
+brew "edencommon"
+brew "eza"
 brew "fd"
 brew "p11-kit"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
 brew "openjpeg"
+brew "librist"
+brew "openvino"
+brew "ffmpeg"
 brew "fzf"
 brew "libavif"
 brew "gd"
@@ -49,13 +53,14 @@ brew "gdk-pixbuf"
 brew "gh"
 brew "ghostscript"
 brew "git"
+brew "git-delta"
 brew "git-flow"
 brew "netpbm"
 brew "librsvg"
 brew "graphviz"
-brew "python@3.12"
 brew "grip"
 brew "httpie"
+brew "libheif"
 brew "imagemagick"
 brew "jenv"
 brew "jq"
@@ -109,4 +114,5 @@ cask "zulu17"
 mas "Forecast Bar", id: 982710545
 mas "GarageBand", id: 682658836
 mas "Microsoft Remote Desktop", id: 1295203466
+mas "Numbers", id: 409203825
 mas "Xcode", id: 497799835
