--- a/git/config
+++ b/git/config
@@ -1,6 +1,6 @@
 [core]
     excludesfile = ~/.config/git/ignore
-    pager = delta
+    pager = delta --diff-so-fancy
 [delta]
     line-numbers = true
     navigate = true
