--- a/git/config
+++ b/git/config
@@ -25,7 +25,7 @@
 [fetch]
     prune = true
 [init]
-    templatedir = ~/projects/od-env/projects/git-templates
+    templateDir = ~/projects/od-env/projects/git-templates
 [interactive]
     diffFilter = delta --color-only
 [merge]
