--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,8 +1,10 @@
+tap "christopher.griffith/local-neovim-tap"
 tap "facebook/fb"
 tap "felixkratz/formulae"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
+tap "homebrew/core"
 tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
@@ -93,6 +95,7 @@ brew "watch"
 brew "watchman"
 brew "wget"
 brew "xdg-ninja"
+brew "christopher.griffith/local-neovim-tap/neovim@0.9.5"
 brew "facebook/fb/idb-companion"
 brew "felixkratz/formulae/borders"
 brew "koekeishiya/formulae/skhd"
