--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -4,8 +4,8 @@ format = """
 [┌───](bold purple) \
 ${os}\
 ${cmd_duration}\
-${directory}\
-${git_branch}\
+${directory}
+[│](bold purple)   ${git_branch}\
 ${git_status}\
 ${git_metrics}\
 ${git_commit}
@@ -40,7 +40,7 @@ style = 'fg:blue'
 
 [directory]
 style = 'fg:yellow'
-truncation_length = 2
+truncation_length = 5
 truncation_symbol = '.../'
 truncate_to_repo = false
 
