--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,26 +1,10 @@
 add_newline = true
 
 format = """
-[┌───](bold purple) \
-${os}\
-${cmd_duration}\
-${directory}
-[│](bold purple)   ${git_branch}\
-${git_status}\
-${git_metrics}\
-${git_commit}
-[└──](bold purple) \
-${docker_context}\
-${lua}\
-${gradle}\
-${java}\
-${ruby}\
-${swift}\
-${rust}\
-${dotnet}\
-${nodejs}\
-${jobs}\
-${character}"""
+[┌───](bold purple) ${os} ${cmd_duration} ${directory} $line_break\
+([│](bold purple)   ${git_branch}${git_status}${git_metrics}${git_commit}\n)\
+[└─](bold purple) ${docker_context}${lua}${gradle}${java}${ruby}${swift}${rust}${dotnet}${nodejs}${jobs}${character}\
+"""
 
 palette = 'nightfox'
 [palettes.nightfox]
