--- a/git/config
+++ b/git/config
@@ -12,6 +12,8 @@
     file-style = bright-yellow
     hunk-header-style = file line-number syntax
     hunk-header-file-style = orange
+    line-numbers-left-format = "┊{nm:>4}│"
+    line-numbers-right-format = "┊{np:>4}│"
     map-styles = bold purple => bold blue, bold cyan => syntax blue
     minus-style                   = syntax "#6C0002"
     minus-non-emph-style          = syntax "#6C0002"
