adds app notunes to prevent accidentally opening Music w/ AirPods

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -111,6 +111,7 @@ cask "meteorologist"
 cask "mitmproxy"
 cask "mos"
 cask "ngrok"
+cask "notunes"
 cask "react-native-debugger"
 cask "temurin"
 cask "zulu17"
