initial helix setup including adding nodenv default packages

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,6 +9,7 @@ tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
 tap "koekeishiya/formulae"
+tap "nodenv/nodenv"
 tap "samtay/tui"
 tap "samuelmeuli/tap"
 tap "xcodesorg/made"
@@ -20,14 +21,15 @@ brew "libssh2"
 brew "aria2"
 brew "perl"
 brew "asciiquarium"
+brew "pycparser"
+brew "cffi"
 brew "python@3.11"
 brew "awscli"
 brew "bat"
 brew "berkeley-db", link: true
 brew "btop"
 brew "python@3.12"
-brew "pycparser"
-brew "cffi"
+brew "glib"
 brew "cmatrix"
 brew "dnsmasq", restart_service: true
 brew "docker"
@@ -36,6 +38,7 @@ brew "docutils"
 brew "folly"
 brew "fizz"
 brew "wangle"
+brew "fbthrift"
 brew "fb303"
 brew "edencommon"
 brew "eza"
@@ -46,7 +49,7 @@ brew "gnutls"
 brew "harfbuzz"
 brew "openjpeg"
 brew "librist"
-brew "openvino"
+brew "pango"
 brew "ffmpeg"
 brew "fzf"
 brew "libavif"
@@ -61,6 +64,7 @@ brew "netpbm"
 brew "librsvg"
 brew "graphviz"
 brew "grip"
+brew "helix"
 brew "httpie"
 brew "libheif"
 brew "imagemagick"
@@ -78,6 +82,7 @@ brew "node-build"
 brew "nodenv"
 brew "openjdk@11"
 brew "openjdk@17"
+brew "openvino"
 brew "p7zip"
 brew "python@3.10"
 brew "python@3.9"
@@ -85,7 +90,6 @@ brew "ruby-build"
 brew "rbenv"
 brew "redis"
 brew "ripgrep"
-brew "ruby"
 brew "scrcpy"
 brew "tmux"
 brew "tproxy"
@@ -100,6 +104,7 @@ brew "facebook/fb/idb-companion"
 brew "felixkratz/formulae/borders"
 brew "koekeishiya/formulae/skhd"
 brew "koekeishiya/formulae/yabai"
+brew "nodenv/nodenv/nodenv-default-packages"
 brew "samtay/tui/tetris"
 brew "xcodesorg/made/xcodes"
 cask "android-commandlinetools"
