installs marta file explorer

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -112,6 +112,7 @@ cask "flipper"
 cask "font-fira-code-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
+cask "marta"
 cask "meteorologist"
 cask "mitmproxy"
 cask "mos"
