--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -9,6 +9,7 @@ tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
 tap "koekeishiya/formulae"
+tap "nikitabobko/tap"
 tap "nodenv/nodenv"
 tap "samtay/tui"
 tap "samuelmeuli/tap"
@@ -102,11 +103,10 @@ brew "xdg-ninja"
 brew "christopher.griffith/local-neovim-tap/neovim@0.9.5"
 brew "facebook/fb/idb-companion"
 brew "felixkratz/formulae/borders"
-brew "koekeishiya/formulae/skhd"
-brew "koekeishiya/formulae/yabai"
 brew "nodenv/nodenv/nodenv-default-packages"
 brew "samtay/tui/tetris"
 brew "xcodesorg/made/xcodes"
+cask "aerospace"
 cask "android-commandlinetools"
 cask "flipper"
 cask "font-fira-code-nerd-font"
