--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -6,7 +6,8 @@ default-root-container-orientation = 'auto'
 enable-normalization-flatten-containers = true
 enable-normalization-opposite-orientation-for-nested-containers = true
 key-mapping.preset = 'qwerty'
-on-focused-monitor-changed = ['move-mouse monitor-lazy-center']
+on-focus-changed = 'move-mouse window-lazy-center'
+on-focused-monitor-changed = 'move-mouse monitor-lazy-center'
 start-at-login = true
 
 [workspace-to-monitor-force-assignment]
