--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -160,12 +160,20 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tpm'
 
     # sainnhe/tmux-fzf {{{
+
     TMUX_FZF_LAUNCH_KEY="F"
     TMUX_FZF_ORDER="session|window|pane|command|keybinding|clipboard|process"
     TMUX_FZF_PREVIEW=0
     TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 
     bind-key "f" run -b "$TMUX_PLUGIN_MANAGER_PATH/tmux-fzf/scripts/window.sh switch"
+
+    # }}}
+
+    # thesast/tmux-transient-status {{{
+
+    set -g @transient-status-stall '0.5'
+
     # }}}
 
     # tmux-plugins/tmux-continuum config {{{
