adds qmk firmware via homebrew

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -11,6 +11,9 @@ tap "jakehilborn/jakehilborn"
 tap "koekeishiya/formulae"
 tap "nikitabobko/tap"
 tap "nodenv/nodenv"
+tap "osx-cross/arm"
+tap "osx-cross/avr"
+tap "qmk/qmk"
 tap "samtay/tui"
 tap "samuelmeuli/tap"
 tap "xcodesorg/made"
@@ -24,12 +27,12 @@ brew "perl"
 brew "asciiquarium"
 brew "pycparser"
 brew "cffi"
-brew "python@3.11"
+brew "cryptography"
+brew "python@3.12"
 brew "awscli"
 brew "bat"
 brew "berkeley-db", link: true
 brew "btop"
-brew "python@3.12"
 brew "glib"
 brew "cmatrix"
 brew "dnsmasq", restart_service: true
@@ -38,10 +41,12 @@ brew "docker-compose"
 brew "docutils"
 brew "folly"
 brew "fizz"
+brew "mvfst"
 brew "wangle"
 brew "fbthrift"
 brew "fb303"
 brew "edencommon"
+brew "libgit2"
 brew "eza"
 brew "fd"
 brew "p11-kit"
@@ -51,6 +56,7 @@ brew "harfbuzz"
 brew "openjpeg"
 brew "librist"
 brew "pango"
+brew "tesseract"
 brew "ffmpeg"
 brew "fzf"
 brew "libavif"
@@ -67,6 +73,7 @@ brew "graphviz"
 brew "grip"
 brew "httpie"
 brew "libheif"
+brew "libraw"
 brew "imagemagick"
 brew "jenv"
 brew "jq"
@@ -75,16 +82,19 @@ brew "mas"
 brew "openjdk"
 brew "maven"
 brew "neofetch"
-brew "neovim"
+brew "neovim", link: false
 brew "nginx"
 brew "node"
 brew "node-build"
 brew "nodenv"
+brew "openblas"
+brew "numpy"
 brew "openjdk@11"
 brew "openjdk@17"
 brew "openvino"
 brew "p7zip"
 brew "python@3.10"
+brew "python@3.11"
 brew "python@3.9"
 brew "ruby-build"
 brew "rbenv"
@@ -103,6 +113,9 @@ brew "christopher.griffith/local-neovim-tap/neovim@0.9.5"
 brew "facebook/fb/idb-companion"
 brew "felixkratz/formulae/borders"
 brew "nodenv/nodenv/nodenv-default-packages"
+brew "osx-cross/arm/arm-gcc-bin@10"
+brew "osx-cross/avr/avr-gcc@9"
+brew "qmk/qmk/qmk"
 brew "samtay/tui/tetris"
 brew "xcodesorg/made/xcodes"
 cask "aerospace"
