--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -83,6 +83,9 @@ alt-shift-g = 'move-node-to-workspace G'
 alt-tab = 'workspace-back-and-forth'
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
+cmd-h = [] # Disable "hide application"
+cmd-alt-h = [] # Disable "hide others"
+
 alt-shift-semicolon = 'mode service'
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
