installed stats as a replacement for iStat Menus and turned back on focus on window in aerospace

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -131,6 +131,7 @@ cask "mos"
 cask "ngrok"
 cask "notunes"
 cask "react-native-debugger"
+cask "stats"
 cask "temurin"
 cask "zulu@17"
 mas "Forecast Bar", id: 982710545
