updates aerospace key bindings for switching workspaces to use hyper instead of alt

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -29,7 +29,7 @@ outer.right =      2
 
 [mode.main.binding]
 alt-shift-ctrl-cmd-t = 'layout tiles vertical horizontal'
-alt-shift-ctrl-cmd-a = 'layout accordion horizontal vertical'
+alt-shift-ctrl-cmd-w = 'layout accordion horizontal vertical'
 
 alt-shift-ctrl-cmd-h = 'focus left --boundaries-action wrap-around-the-workspace'
 alt-shift-ctrl-cmd-j = 'focus down --boundaries-action wrap-around-the-workspace'
@@ -43,25 +43,25 @@ alt-shift-l = 'move right'
 
 alt-shift-ctrl-cmd-minus = 'resize smart -100'
 alt-shift-ctrl-cmd-equal = 'resize smart +100'
-alt-shift-ctrl-cmd-b = 'balance-sizes'
+alt-shift-ctrl-cmd-0 = 'balance-sizes'
 
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-5 = 'workspace 5'
-alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
+alt-shift-ctrl-cmd-1 = 'workspace 1'
+alt-shift-ctrl-cmd-2 = 'workspace 2'
+alt-shift-ctrl-cmd-3 = 'workspace 3'
+alt-shift-ctrl-cmd-4 = 'workspace 4'
+alt-shift-ctrl-cmd-5 = 'workspace 5'
+alt-shift-ctrl-cmd-6 = 'workspace 6'
+alt-shift-ctrl-cmd-7 = 'workspace 7'
+alt-shift-ctrl-cmd-8 = 'workspace 8'
+alt-shift-ctrl-cmd-9 = 'workspace 9'
 
-alt-a = 'workspace A'
-alt-b = 'workspace B'
-alt-c = 'workspace C'
-alt-d = 'workspace D'
-alt-e = 'workspace E'
-alt-f = 'workspace F'
-alt-g = 'workspace G'
+alt-shift-ctrl-cmd-a = 'workspace A'
+alt-shift-ctrl-cmd-b = 'workspace B'
+alt-shift-ctrl-cmd-c = 'workspace C'
+alt-shift-ctrl-cmd-d = 'workspace D'
+alt-shift-ctrl-cmd-e = 'workspace E'
+alt-shift-ctrl-cmd-f = 'workspace F'
+alt-shift-ctrl-cmd-g = 'workspace G'
 
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
