--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -28,9 +28,6 @@ outer.top =        2
 outer.right =      2
 
 [mode.main.binding]
-alt-shift-ctrl-cmd-t = 'layout tiles vertical horizontal'
-alt-shift-ctrl-cmd-w = 'layout accordion horizontal vertical'
-
 alt-shift-ctrl-cmd-h = 'focus left --boundaries-action wrap-around-the-workspace'
 alt-shift-ctrl-cmd-j = 'focus down --boundaries-action wrap-around-the-workspace'
 alt-shift-ctrl-cmd-k = 'focus up --boundaries-action wrap-around-the-workspace'
@@ -40,10 +37,6 @@ alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
-
-alt-shift-ctrl-cmd-minus = 'resize smart -200'
-alt-shift-ctrl-cmd-equal = 'resize smart +200'
-alt-shift-ctrl-cmd-0 = 'balance-sizes'
 
 alt-shift-ctrl-cmd-1 = 'workspace 1'
 alt-shift-ctrl-cmd-2 = 'workspace 2'
@@ -89,12 +82,22 @@ cmd-alt-h = [] # Disable "hide others"
 
 alt-shift-semicolon = 'mode service'
 [mode.service.binding]
-esc = ['reload-config', 'mode main']
-r = ['flatten-workspace-tree', 'mode main']
-f = ['layout floating tiling', 'mode main']
-backspace = ['close-all-windows-but-current', 'mode main']
+alt-shift-ctrl-cmd-h = 'focus left --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-cmd-j = 'focus down --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-cmd-k = 'focus up --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-cmd-l = 'focus right --boundaries-action wrap-around-the-workspace'
 
-alt-shift-h = ['join-with left', 'mode main']
-alt-shift-j = ['join-with down', 'mode main']
-alt-shift-k = ['join-with up', 'mode main']
-alt-shift-l = ['join-with right', 'mode main']
+0 = 'balance-sizes'
+a = 'layout accordion horizontal vertical'
+backspace = 'close-all-windows-but-current'
+equal = 'resize smart +200'
+esc = ['reload-config', 'mode main']
+f = 'layout floating tiling'
+minus = 'resize smart -200'
+r = 'flatten-workspace-tree'
+t = 'layout tiles vertical horizontal'
+
+alt-shift-h = 'join-with left'
+alt-shift-j = 'join-with down'
+alt-shift-k = 'join-with up'
+alt-shift-l = 'join-with right'
