--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -108,33 +108,33 @@ bind-key C-l swap-window -t +1 \; select-window -t +1
 setw -g mode-keys vi
 set -g status-keys vi
 
-# Smart pane switching/resizing with awareness of Vim splits.
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
+# Pane movement
 bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -Z -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -Z -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -Z -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -Z -R"
 
-bind-key -T copy-mode-vi C-h select-pane -Z -L
-bind-key -T copy-mode-vi C-j select-pane -Z -D
-bind-key -T copy-mode-vi C-k select-pane -Z -U
-
-# Send to Vim
-bind-key -n M-C-h send-keys M-h
-bind-key -n M-C-l send-keys M-l
-bind-key -n M-C-k send-keys M-k
-bind-key -n M-C-j send-keys M-j
-
+# Pane resizing
 bind-key -n M-h resize-pane -L
 bind-key -n M-l resize-pane -R
-bind-key -n M-k resize-pane -U
 bind-key -n M-j resize-pane -D
+bind-key -n M-k resize-pane -U
+
+bind-key -n C-M-h send-keys C-w ">"
+bind-key -n C-M-l send-keys C-w "<"
+bind-key -n C-M-j send-keys C-w "+"
+bind-key -n C-M-k send-keys C-w "-"
 
 # Vim style copy
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+bind-key -T copy-mode-vi C-h select-pane -Z -L
+bind-key -T copy-mode-vi C-j select-pane -Z -D
+bind-key -T copy-mode-vi C-k select-pane -Z -U
 
 # }}}
 
