updates kitty config by replacing no op overrides with a clear all shortcuts at top of config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-# vim:fileencoding=utf-8:foldmethod=marker
+clear_all_shortcuts yes
 
 # Font
 bold_font        auto
@@ -46,16 +46,3 @@ map ctrl+, send_text all \x17
 
 # Kitten Hints
 kitten_alias hints hints --hints-offset=0
-
-# Scrolling
-map kitty_mod+,     no_op
-map kitty_mod+.     no_op
-map kitty_mod+alt+t no_op
-map kitty_mod+left  no_op
-map kitty_mod+q     no_op
-map kitty_mod+right no_op
-map kitty_mod+t     no_op
-map shift+cmd+w     no_op
-
-# Window Resize Menu
-map cmd+r           no_op
