--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,4 +1,3 @@
-tap "christopher.griffith/local-neovim-tap"
 tap "facebook/fb"
 tap "felixkratz/formulae"
 tap "homebrew/bundle"
@@ -35,7 +34,7 @@ brew "berkeley-db", link: true
 brew "btop"
 brew "glib"
 brew "cmatrix"
-brew "dnsmasq", restart_service: true
+brew "dnsmasq", restart_service: :changed
 brew "docker"
 brew "docker-compose"
 brew "docutils"
@@ -82,7 +81,7 @@ brew "mas"
 brew "openjdk"
 brew "maven"
 brew "neofetch"
-brew "neovim", link: false
+brew "neovim"
 brew "nginx"
 brew "node"
 brew "node-build"
@@ -103,13 +102,12 @@ brew "ripgrep"
 brew "scrcpy"
 brew "tmux"
 brew "tproxy"
-brew "trash"
+brew "trash", link: true
 brew "vim"
 brew "watch"
 brew "watchman"
 brew "wget"
 brew "xdg-ninja"
-brew "christopher.griffith/local-neovim-tap/neovim@0.9.5"
 brew "facebook/fb/idb-companion"
 brew "felixkratz/formulae/borders"
 brew "nodenv/nodenv/nodenv-default-packages"
@@ -124,7 +122,6 @@ cask "flipper"
 cask "font-fira-code-nerd-font"
 cask "karabiner-elements"
 cask "kitty"
-cask "marta"
 cask "meteorologist"
 cask "mitmproxy"
 cask "mos"
