updates press and hold on the capslock key to be the Meh key and updates aerospace config to use Meh/Hyper to avoid using different modes

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -31,33 +31,45 @@ alt-shift-ctrl-cmd-minus = 'resize smart -100'
 alt-shift-ctrl-cmd-backspace = 'close-all-windows-but-current'
 alt-shift-ctrl-cmd-equal = 'resize smart +100'
 
-alt-shift-ctrl-cmd-h = 'focus left --boundaries-action wrap-around-the-workspace'
-alt-shift-ctrl-cmd-j = 'focus down --boundaries-action wrap-around-the-workspace'
-alt-shift-ctrl-cmd-k = 'focus up --boundaries-action wrap-around-the-workspace'
-alt-shift-ctrl-cmd-l = 'focus right --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-cmd-0 = 'balance-sizes'
+alt-shift-ctrl-cmd-a = 'layout accordion horizontal vertical'
+alt-shift-ctrl-cmd-c = 'reload-config'
+alt-shift-ctrl-cmd-f = 'layout floating tiling'
+alt-shift-ctrl-cmd-r = 'flatten-workspace-tree'
+alt-shift-ctrl-cmd-t = 'layout tiles vertical horizontal'
+
+alt-shift-ctrl-h = 'focus left --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-j = 'focus down --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-k = 'focus up --boundaries-action wrap-around-the-workspace'
+alt-shift-ctrl-l = 'focus right --boundaries-action wrap-around-the-workspace'
 
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
-alt-shift-ctrl-cmd-1 = 'workspace 1'
-alt-shift-ctrl-cmd-2 = 'workspace 2'
-alt-shift-ctrl-cmd-3 = 'workspace 3'
-alt-shift-ctrl-cmd-4 = 'workspace 4'
-alt-shift-ctrl-cmd-5 = 'workspace 5'
-alt-shift-ctrl-cmd-6 = 'workspace 6'
-alt-shift-ctrl-cmd-7 = 'workspace 7'
-alt-shift-ctrl-cmd-8 = 'workspace 8'
-alt-shift-ctrl-cmd-9 = 'workspace 9'
+alt-shift-ctrl-cmd-h = 'join-with left'
+alt-shift-ctrl-cmd-j = 'join-with down'
+alt-shift-ctrl-cmd-k = 'join-with up'
+alt-shift-ctrl-cmd-l = 'join-with right'
 
-alt-shift-ctrl-cmd-a = 'workspace A'
-alt-shift-ctrl-cmd-b = 'workspace B'
-alt-shift-ctrl-cmd-c = 'workspace C'
-alt-shift-ctrl-cmd-d = 'workspace D'
-alt-shift-ctrl-cmd-e = 'workspace E'
-alt-shift-ctrl-cmd-f = 'workspace F'
-alt-shift-ctrl-cmd-g = 'workspace G'
+alt-shift-ctrl-1 = 'workspace 1'
+alt-shift-ctrl-2 = 'workspace 2'
+alt-shift-ctrl-3 = 'workspace 3'
+alt-shift-ctrl-4 = 'workspace 4'
+alt-shift-ctrl-5 = 'workspace 5'
+alt-shift-ctrl-6 = 'workspace 6'
+alt-shift-ctrl-7 = 'workspace 7'
+alt-shift-ctrl-8 = 'workspace 8'
+alt-shift-ctrl-9 = 'workspace 9'
+
+alt-shift-ctrl-a = 'workspace A'
+alt-shift-ctrl-b = 'workspace B'
+alt-shift-ctrl-c = 'workspace C'
+alt-shift-ctrl-d = 'workspace D'
+alt-shift-ctrl-e = 'workspace E'
+alt-shift-ctrl-f = 'workspace F'
+alt-shift-ctrl-g = 'workspace G'
 
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
@@ -85,19 +97,4 @@ cmd-alt-h = [] # Disable "hide others"
 
 alt-shift-semicolon = 'mode service'
 [mode.service.binding]
-alt-shift-ctrl-cmd-h = 'focus left --boundaries-action wrap-around-the-workspace'
-alt-shift-ctrl-cmd-j = 'focus down --boundaries-action wrap-around-the-workspace'
-alt-shift-ctrl-cmd-k = 'focus up --boundaries-action wrap-around-the-workspace'
-alt-shift-ctrl-cmd-l = 'focus right --boundaries-action wrap-around-the-workspace'
-
-0 = 'balance-sizes'
-a = 'layout accordion horizontal vertical'
 esc = ['reload-config', 'mode main']
-f = 'layout floating tiling'
-r = 'flatten-workspace-tree'
-t = 'layout tiles vertical horizontal'
-
-alt-shift-h = 'join-with left'
-alt-shift-j = 'join-with down'
-alt-shift-k = 'join-with up'
-alt-shift-l = 'join-with right'
