--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -57,7 +57,6 @@ brew "librist"
 brew "pango"
 brew "tesseract"
 brew "ffmpeg"
-brew "fzf"
 brew "libavif"
 brew "gd"
 brew "gdk-pixbuf"
@@ -132,6 +131,7 @@ cask "stats"
 cask "temurin"
 cask "zulu@17"
 mas "Forecast Bar", id: 982710545
+mas "GarageBand", id: 682658836
 mas "Microsoft Remote Desktop", id: 1295203466
 mas "Numbers", id: 409203825
 mas "Xcode", id: 497799835
