removes unused items after running brew doctor

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,10 +1,6 @@
 tap "facebook/fb"
 tap "felixkratz/formulae"
-tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
 tap "homebrew/core"
-tap "homebrew/services"
 tap "isen-ng/dotnet-sdk-versions"
 tap "jakehilborn/jakehilborn"
 tap "koekeishiya/formulae"
@@ -53,6 +49,7 @@ brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
 brew "openjpeg"
+brew "icu4c@77"
 brew "librist"
 brew "pango"
 brew "tesseract"
@@ -99,7 +96,6 @@ brew "rbenv"
 brew "redis"
 brew "ripgrep"
 brew "scrcpy"
-brew "starship"
 brew "tmux"
 brew "tproxy"
 brew "trash", link: true
