updates kitty/tmux prefix to press ctrl+, -> kitty sends ctrl+_, and tmux binds ctrl+_ to send the prefix key (required because ctrl cannot be used with comma)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,8 @@
 # Prefix Key
 unbind-key d
 unbind-key C-b
-set -g prefix C-w # In the terminal, <C-,> is mapped to send <C-,w> (0x17)
+set -g prefix C-_
+bind-key C-_ send-prefix
 
 set -g default-command $SHELL
 
