--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -41,8 +41,8 @@ macos_option_as_alt yes
 macos_quit_when_last_window_closed yes
 macos_show_window_title_in none
 
-# tmux prefix mapping ctrl+, -> ctrl+w
-map ctrl+, send_text all \x17
+# tmux prefix mapping ctrl+, -> ctrl+_
+map ctrl+, send_text all \x1f
 
 # Kitten Hints
 kitten_alias hints hints --hints-offset=0
