removes tmux transient plugin and adds tmux-dotbar

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,7 +61,7 @@ set -g status-style "${BLUE__BLUE__STYLE}"
 set -g window-status-separator ""
 set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-format " ${WINDOW_NUMBER}:${WINDOW_NAME}"
-set -g window-status-current-format " ${WHITE__BLUE}${WINDOW_NUMBER}:${WINDOW_NAME}${WINDOW_FLAGS} "
+set -g window-status-current-format " ${WHITE__BLUE}${WINDOW_NUMBER}:${WINDOW_NAME}${WINDOW_FLAGS}"
 
 set -g window-status-current-style "${LIGHT_BLUE__BLUE__STYLE}"
 set -g window-status-activity-style "${LIGHT_BLUE__BLUE__STYLE}"
@@ -154,11 +154,11 @@ setw -g aggressive-resize on
 # Plugins {{{
 
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'thesast/tmux-transient-status'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'vaaleyard/tmux-dotbar'
 
     # sainnhe/tmux-fzf {{{
 
@@ -168,12 +168,6 @@ set -g @plugin 'tmux-plugins/tpm'
     TMUX_FZF_WINDOW_FORMAT="#{window_name}"
 
     bind-key "f" run -b "$TMUX_PLUGIN_MANAGER_PATH/tmux-fzf/scripts/window.sh switch"
-
-    # }}}
-
-    # thesast/tmux-transient-status {{{
-
-    set -g @transient-status-stall '0.5'
 
     # }}}
 
@@ -189,6 +183,13 @@ set -g @plugin 'tmux-plugins/tpm'
     set -g @prefix_highlight_fg '255'
     set -g @prefix_highlight_bg '27'
     set -g @prefix_highlight_prefix_prompt '--Prefix--'
+
+    # }}}
+
+    # 'vaaleyard/tmux-dotbar' {{{
+
+    set -g @tmux-dotbar-position top
+    set -g @tmux-dotbar-window-status-separator "•"
 
     # }}}
 
