organizes tmux resurrect options

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -142,9 +142,6 @@ bind-key -T copy-mode-vi C-k select-pane -Z -U
 set -g renumber-windows on
 set -w -g wrap-search off
 
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'off'
-
 set -g default-terminal "${TERM}"
 
 set -g focus-events on
@@ -183,6 +180,13 @@ set -g @plugin 'vaaleyard/tmux-dotbar'
     set -g @prefix_highlight_fg '255'
     set -g @prefix_highlight_bg '27'
     set -g @prefix_highlight_prefix_prompt '--Prefix--'
+
+    # }}}
+
+    # tmux-plugins/tmux-resurrect {{{
+
+    set -g @resurrect-strategy-nvim 'session'
+    set -g @resurrect-capture-pane-contents 'off'
 
     # }}}
 
