rebinds +/- background opacity to ctrl+shift up/down, so that ctrl/shift +/- can fall back to defaults, which is font size +/-

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,8 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+# kitty_mod
+kitty_mod ctrl+shift
+
 # Font
 bold_font        auto
 bold_italic_font auto
@@ -26,14 +29,11 @@ window_alert_on_bell no
 hide_window_decorations yes
 confirm_os_window_close 0
 
-# kitty_mod
-kitty_mod ctrl+shift
-
 # Opacity
 background_opacity 0.9
 dynamic_background_opacity yes
-map kitty_mod+equal    set_background_opacity +0.1
-map kitty_mod+minus    set_background_opacity -0.1
+map kitty_mod+up    set_background_opacity +0.1
+map kitty_mod+down  set_background_opacity -0.1
 
 # MacOS
 macos_custom_beam_cursor yes
