updates font to FiraCode Nerd Font Mono Light

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ kitty_mod ctrl+shift
 # Font
 bold_font        auto
 bold_italic_font auto
-font_family FiraCode Nerd Font Mono
+font_family FiraCode Nerd Font Mono Light
 font_size 18.0
 italic_font      auto
 
