--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -1,6 +1,7 @@
 accordion-padding = 0
 after-login-command = []
 after-startup-command = []
+automatically-unhide-macos-hidden-apps = false
 default-root-container-layout = 'tiles'
 default-root-container-orientation = 'auto'
 enable-normalization-flatten-containers = true
