remvoes unused variables from tmux.conf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,20 +13,8 @@ WINDOW_NAME="#W"
 WINDOW_FLAGS="#F"
 WINDOW_NUMBER="#I"
 
-ARROW_SMALL_LEFT=""
-ARROW_SMALL_RIGHT=""
-ARROW_LARGE_LEFT=""
-ARROW_LARGE_RIGHT=""
-
-HALF_CIRCLE_LEFT=""
-HALF_CIRCLE_RIGHT=""
-HALF_CIRCLE_SMALL_RIGHT=""
-HALF_CIRCLE_SMALL_LEFT=""
-
 BLUE="#131A24"
-GRAY="#303030"
 LIGHT_BLUE="#719CD6"
-DARK_BLUE="#192330"
 WHITE="#AEAFB0"
 
 BLUE__BLUE__STYLE="fg=${BLUE},bg=${BLUE}"
@@ -50,13 +38,13 @@ set -g mode-style "${BLUE__WHITE__STYLE}"
 set -g message-style "${BLUE__WHITE__STYLE}"
 set -g message-command-style "${BLUE__WHITE__STYLE}"
 
-set -g status-left "${BLUE__LIGHT_BLUE} #S ${LIGHT_BLUE__BLUE}${HALF_CIRCLE_RIGHT}"
+set -g status-left "#S"
 set -g status-left-length "100"
 set -g status-left-style NONE
 set -g status-right ""
 set -g status-right-length "0"
 set -g status-right-style NONE
-set -g status-style "${BLUE__BLUE__STYLE}"
+set -g status-style ""
 
 set -g window-status-separator ""
 set -g window-status-style "${LIGHT_BLUE__BLUE__STYLE}"
